--- a/NewDiscordBridge/NewDiscordBridge.csproj
+++ b/NewDiscordBridge/NewDiscordBridge.csproj
@@ -65,7 +65,7 @@
     <Compile Include="Discord.cs" />
     <Compile Include="Logs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleHelpFormatter.cs" />
+    <Compile Include="HelpFormatter.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
