--- a/NewDiscordBridge/NewDiscordBridge.csproj
+++ b/NewDiscordBridge/NewDiscordBridge.csproj
@@ -40,8 +40,9 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="OTAPI">
-      <HintPath>..\refs\Mobile\OTAPI.dll</HintPath>
+    <Reference Include="OTAPI, Version=1.4.0.5, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\refs\1.4\OTAPI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,11 +52,13 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TerrariaServer">
-      <HintPath>..\refs\Mobile\TerrariaServer.exe</HintPath>
+    <Reference Include="TerrariaServer, Version=1.4.0.5, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\refs\1.4\TerrariaServer.exe</HintPath>
     </Reference>
-    <Reference Include="TShockAPI">
-      <HintPath>..\refs\Mobile\TShockAPI.dll</HintPath>
+    <Reference Include="TShockAPI, Version=4.4.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\refs\1.4\TShockAPI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
